@@ -8,11 +8,8 @@ import io.vertx.core.WorkerExecutor;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.ext.web.client.HttpResponse;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.io.UncheckedIOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
@@ -111,51 +108,34 @@ public class SplitFileProcessingService {
     ChangeManagerClient client,
     OkapiConnectionParams params
   ) {
-    return executor.executeBlocking(
-      promise ->
-        initializeJob(entity, client)
-          .compose(splitPieces ->
-            Future.all(
-              splitPieces
-                .values()
-                .stream()
-                .map(splitFileInformation ->
-                  initializeChildren(
-                    entity,
-                    client,
-                    params,
-                    splitFileInformation
-                  )
-                )
-                .toList()
-            )
-          )
-          // do this after everything has been queued successfully
-          .compose(v ->
-            uploadDefinitionService.updateBlocking(
-              entity.getUploadDefinition().getId(),
-              definition ->
-                Future.succeededFuture(
-                  definition.withStatus(UploadDefinition.Status.COMPLETED)
-                ),
-              params.getTenantId()
-            )
-          )
-          .onSuccess(v -> LOGGER.info("Job split and queued successfully!"))
-          .onFailure(err -> {
-            String jobExecutionId = entity.getUploadDefinition().getMetaJobExecutionId();
-            if (jobExecutionId != null) {
-              LOGGER.warn("startJob:: File was processed with errors by jobExecutionId {}. Cause: {}", jobExecutionId, err.getMessage());
-              uploadDefinitionService.updateJobExecutionStatus(jobExecutionId, new StatusDto().withStatus(ERROR).withErrorStatus(FILE_PROCESSING_ERROR), params);
-              uploadDefinitionService.updateUploadDefinitionStatus(entity.getUploadDefinition().getId(), UploadDefinition.Status.ERROR, params.getTenantId())
-                .onFailure(errMsg -> LOGGER.error("startJob::Unable to update UploadDefinitionStatus by jobExecutionId {}. Cause: {}", jobExecutionId, errMsg));
-            }
-            LOGGER.error("Unable to start job: ", err);
-          })
-          .<Void>mapEmpty()
-          .onComplete(promise),
-      false
-    );
+    return initializeJob(entity, client)
+      .compose(splitPieces ->
+        Future.all(splitPieces.values()
+          .stream()
+          .map(splitFileInformation -> initializeChildren(entity, client, params, splitFileInformation))
+          .toList()
+        )
+      )
+      // do this after everything has been queued successfully
+      .compose(v ->
+        uploadDefinitionService.updateBlocking(
+          entity.getUploadDefinition().getId(),
+          definition -> Future.succeededFuture(definition.withStatus(UploadDefinition.Status.COMPLETED)),
+          params.getTenantId()
+        )
+      )
+      .onSuccess(v -> LOGGER.info("startJob:: Job split and queued successfully!"))
+      .onFailure(err -> {
+        String jobExecutionId = entity.getUploadDefinition().getMetaJobExecutionId();
+        if (jobExecutionId != null) {
+          LOGGER.warn("startJob:: File was processed with errors by jobExecutionId {}. Cause: {}", jobExecutionId, err.getMessage());
+          uploadDefinitionService.updateJobExecutionStatus(jobExecutionId, new StatusDto().withStatus(ERROR).withErrorStatus(FILE_PROCESSING_ERROR), params);
+          uploadDefinitionService.updateUploadDefinitionStatus(entity.getUploadDefinition().getId(), UploadDefinition.Status.ERROR, params.getTenantId())
+            .onFailure(errMsg -> LOGGER.error("startJob::Unable to update UploadDefinitionStatus by jobExecutionId {}. Cause: {}", jobExecutionId, errMsg));
+        }
+        LOGGER.error("Unable to start job: ", err);
+      })
+      .mapEmpty();
   }
 
   /**
@@ -190,10 +170,7 @@ public class SplitFileProcessingService {
         Map<String, JobExecution> executions = cf.resultAt(0);
         Map<String, SplitFileInformation> splitInformation = cf.resultAt(1);
 
-        splitInformation.forEach((key, value) ->
-          value.setJobExecution(executions.get(key))
-        );
-
+        splitInformation.forEach((key, value) -> value.setJobExecution(executions.get(key)));
         return splitInformation;
       })
       .compose(result ->
@@ -205,11 +182,7 @@ public class SplitFileProcessingService {
               JobExecution execution = splitInfo.getJobExecution();
               execution.setTotalRecordsInFile(splitInfo.getTotalRecords());
 
-              return client
-                .putChangeManagerJobExecutionsById(
-                  execution.getId(),
-                  execution
-                )
+              return client.putChangeManagerJobExecutionsById(execution.getId(), execution)
                 .map(this::verifyOkStatus);
             })
             .toList()
@@ -255,7 +228,7 @@ public class SplitFileProcessingService {
           // update parent
           .compose(r ->
             fileProcessor.updateJobsProfile(
-              Arrays.asList(
+              List.of(
                 new JobExecutionDto()
                   .withId(splitInfo.getJobExecution().getId())
               ),
@@ -349,7 +322,7 @@ public class SplitFileProcessingService {
     int partNumber = 1;
     for (String key : keys) {
       InitJobExecutionsRqDto initJobExecutionsRqDto = new InitJobExecutionsRqDto()
-        .withFiles(Arrays.asList(new File().withName(key)))
+        .withFiles(List.of(new File().withName(key)))
         .withParentJobId(parentJobExecution.getId())
         .withJobProfileInfo(jobProfileInfo)
         .withJobPartNumber(partNumber)
@@ -361,7 +334,7 @@ public class SplitFileProcessingService {
 
       futures.add(
         sendJobExecutionRequest(client, initJobExecutionsRqDto)
-          .map(collection -> collection.getJobExecutions().get(0))
+          .map(collection -> collection.getJobExecutions().getFirst())
           .onFailure(err ->
             LOGGER.error(
               "Unable to register split file execution for {}: ",
@@ -379,7 +352,7 @@ public class SplitFileProcessingService {
 
   /**
    * Gets the S3 storage key for a given job execution ID.
-   *
+   * <p>
    * <strong>No guarantee is made that the returned key will be valid in these cases:</strong>
    * <ul>
    * <li>The job execution ID refers to a parent or other meta job</li>
@@ -526,7 +499,7 @@ public class SplitFileProcessingService {
           .map(key -> new File().withName(key))
           .map(file ->
             new InitJobExecutionsRqDto()
-              .withFiles(Arrays.asList(file))
+              .withFiles(List.of(file))
               .withJobProfileInfo(entity.getJobProfileInfo())
               .withSourceType(InitJobExecutionsRqDto.SourceType.COMPOSITE)
               .withUserId(
@@ -538,7 +511,7 @@ public class SplitFileProcessingService {
           .map(request ->
             sendJobExecutionRequest(client, request)
               .map(InitJobExecutionsRsDto::getJobExecutions)
-              .map(executions -> executions.get(0))
+              .map(List::getFirst)
           )
           .toList()
       )
@@ -550,8 +523,7 @@ public class SplitFileProcessingService {
           .stream()
           .collect(Collectors.toMap(JobExecution::getSourcePath, exec -> exec));
       })
-      .onFailure(err -> LOGGER.error("Error creating parent job execution", err)
-      );
+      .onFailure(err -> LOGGER.error("Error creating parent job execution", err));
   }
 
   /**
@@ -561,49 +533,27 @@ public class SplitFileProcessingService {
    * Note that non-MARC binary format files will not be split; instead, the keys of the split
    * chunks will simply be a list containing only the original key
    */
-  protected Future<SplitFileInformation> splitFile(
-    String key,
-    JobProfileInfo profile
-  ) {
-    return executor.executeBlocking(
-      promise ->
-        Future
-          .succeededFuture(new SplitFileInformation().withKey(key))
-          // splitting and counting must be done sequentially as splitting deletes the original file
-          .compose(result ->
-            minioStorageService
-              .readFile(key)
-              .map((InputStream stream) -> {
-                try {
-                  return result.withTotalRecords(
-                    FileSplitUtilities.countRecordsInFile(key, stream, profile)
-                  );
-                } catch (IOException e) {
-                  throw new UncheckedIOException(e);
-                }
-              })
-          )
-          .compose((SplitFileInformation file) -> {
-            if (FileSplitUtilities.isMarcBinary(key, profile)) {
-              return fileSplitService
-                .splitFileFromS3(vertx.getOrCreateContext(), key)
-                .map(file::withSplitKeys);
-            } else {
-              return Future.succeededFuture(
-                file.withSplitKeys(Arrays.asList(key))
-              );
-            }
-          })
-          .onComplete(promise),
-      false
-    );
+  protected Future<SplitFileInformation> splitFile(String key, JobProfileInfo profile) {
+    return Future.succeededFuture(new SplitFileInformation().withKey(key))
+      // splitting and counting must be done sequentially as splitting deletes the original file
+      .compose(result -> minioStorageService.readFile(key)
+        .compose((InputStream stream) -> executor.executeBlocking(
+          () -> result.withTotalRecords(FileSplitUtilities.countRecordsInFile(key, stream, profile)), false)
+        )
+      )
+      .compose((SplitFileInformation file) -> {
+        if (FileSplitUtilities.isMarcBinary(key, profile)) {
+          return fileSplitService
+            .splitFileFromS3(vertx.getOrCreateContext(), key)
+            .map(file::withSplitKeys);
+        } else {
+          return Future.succeededFuture(file.withSplitKeys(List.of(key)));
+        }
+      });
   }
 
   protected Buffer verifyOkStatus(HttpResponse<Buffer> response) {
-    if (
-      response.statusCode() >= HttpStatus.SC_OK &&
-        response.statusCode() <= HttpStatus.SC_NO_CONTENT
-    ) {
+    if (response.statusCode() >= HttpStatus.SC_OK && response.statusCode() <= HttpStatus.SC_NO_CONTENT) {
       return response.bodyAsBuffer();
     } else {
       throw LOGGER.throwing(
