@@ -22,7 +22,6 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import io.vertx.core.AsyncResult;
-import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
 import io.vertx.core.Handler;
 import io.vertx.core.buffer.Buffer;
@@ -78,21 +77,21 @@ public class SplitFileProcessingServiceStartJobTest
         assertThat(request.getJobProfileInfo(), is(JOB_PROFILE_INFO));
         assertThat(request.getUserId(), is("created-user-id"));
 
-        if (request.getFiles().get(0).getName().contains("1")) {
+        if (request.getFiles().getFirst().getName().contains("1")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
-                .withJobExecutions(Arrays.asList(JOB_EXECUTION_1))
+                .withJobExecutions(List.of(JOB_EXECUTION_1))
             )
           );
-        } else if (request.getFiles().get(0).getName().contains("2")) {
+        } else if (request.getFiles().getFirst().getName().contains("2")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
                 .withJobExecutions(Arrays.asList(JOB_EXECUTION_2))
             )
           );
-        } else if (request.getFiles().get(0).getName().contains("3")) {
+        } else if (request.getFiles().getFirst().getName().contains("3")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
@@ -282,21 +281,21 @@ public class SplitFileProcessingServiceStartJobTest
         assertThat(request.getFiles(), hasSize(1));
         assertThat(request.getJobProfileInfo(), is(JOB_PROFILE_INFO));
 
-        if (request.getFiles().get(0).getName().contains("1")) {
+        if (request.getFiles().getFirst().getName().contains("1")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
                 .withJobExecutions(Arrays.asList(JOB_EXECUTION_1))
             )
           );
-        } else if (request.getFiles().get(0).getName().contains("2")) {
+        } else if (request.getFiles().getFirst().getName().contains("2")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
                 .withJobExecutions(Arrays.asList(JOB_EXECUTION_2))
             )
           );
-        } else if (request.getFiles().get(0).getName().contains("3")) {
+        } else if (request.getFiles().getFirst().getName().contains("3")) {
           responseHandler.handle(
             getSuccessArBuffer(
               new InitJobExecutionsRsDto()
@@ -381,7 +380,7 @@ public class SplitFileProcessingServiceStartJobTest
   @Test
   public void testInitializeChildren(TestContext context) {
     doReturn(
-      CompositeFuture.all(
+      Future.all(
         Future.succeededFuture(JOB_EXECUTION_2),
         Future.succeededFuture(JOB_EXECUTION_3)
       )
@@ -492,7 +491,7 @@ public class SplitFileProcessingServiceStartJobTest
 
   @Test
   public void testInitializeChildrenFailure(TestContext context) {
-    doReturn(CompositeFuture.all(new ArrayList<>()))
+    doReturn(Future.all(new ArrayList<>()))
       .when(service)
       .registerSplitFileParts(
         any(),
